--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+    background-color: #F3F4F6 !important;
+}
