Created first character list display using real data

--- a/src/app/characters/character/character.component.html
+++ b/src/app/characters/character/character.component.html
@@ -1,18 +1,18 @@
 <div class="group flex flex-col justify-start items-center px-5 py-6 bg-white rounded-xl h-full hover:shadow-xl cursor-pointer transition delay-50 duration-300 ease-in-out">
-  <div class="flex flex-row justify-center items-center p-2 my-5 rounded-full border-2">
-    <img class="w-24 h-24 max-w-24 max-h-24 rounded-full" src="https://rickandmortyapi.com/api/character/avatar/502.jpeg" alt="Nombre aquí" />
+  <div [className]="[character.gender.toLocaleLowerCase() === 'male' ? borderCommonClass + ' border-blue-500' : character.gender.toLowerCase() === 'female' ? borderCommonClass + ' border-pink-500' : character.gender.toLowerCase() === 'genderless' ? borderCommonClass + ' border-yellow-500' : borderCommonClass + ' border-gray-500']">
+    <img class="w-24 h-24 max-w-24 max-h-24 rounded-full" src={{character.image}} alt="{{character.name}}" />
   </div>
   <div class="flex flex-col justify-center items-center p-0">
     <div class="flex flex-col items-start p-0 mb-3">
-      <div class="text-base text-center font-medium text-blue-900 group-hover:text-gray-900">Name aquí</div>
+      <div class="text-base text-center font-medium text-blue-900 group-hover:text-gray-900">{{character.name}}</div>
     </div>
     <div class="flex flex-row justify-center items-center p-0 mb-3">
-      <div class="text-sm text-gray-700 capitalize group-hover:text-gray-800">Especie aquí</div>
+      <div class="text-sm text-gray-700 capitalize group-hover:text-gray-800">{{character.species}}</div>
     </div>
     <div class="flex flex-row justify-center items-center p-0">
-      <div class="w-2 h-2 max-w-2 max-h-2 rounded-full mr-1"></div>
+      <div [className]="[character.status.toLowerCase() === 'alive' ? statusCommonClass + ' bg-morty-500' : character.status.toLowerCase() === 'dead' ? statusCommonClass + ' bg-red-500' : statusCommonClass + ' bg-gray-500']"></div>
       <div class="text-xs text-gray-500 capitalize group-hover:text-gray-600">
-        Status aquí
+        {{character.status}}
       </div>
     </div>
   </div>
