--- a/src/app/characters/list/list.component.html
+++ b/src/app/characters/list/list.component.html
@@ -1,8 +1,3 @@
 <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-  <app-character></app-character>
-  <app-character></app-character>
-  <app-character></app-character>
-  <app-character></app-character>
-  <app-character></app-character>
-  <app-character></app-character>
+  <app-character *ngFor="let character of characters" [character]="character"></app-character>
 </div>
