--- a/src/app/characters/character-detail/character-detail.component.html
+++ b/src/app/characters/character-detail/character-detail.component.html
@@ -1,8 +1,8 @@
 <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
   <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-    <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+    <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true" (click)="toggleHandler()"></div>
     <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-    <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+    <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full animate__animated animate__fadeIn">
       <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
         <div class="sm:flex sm:items-start">
           <div class="flex flex-col items-center bg-white rounded-xl max-h-screen">
@@ -58,7 +58,7 @@
                 <div class="flex flex-row items-start text-gray-900 py-2 mb-2 px-0">
                   Episodes ({{ character.episode.length }})
                 </div>
-                <ul *ngIf="character.episodes && character.episodes.length > 0" class="flex flex-col w-full max-h-72 overflow-y-scroll">
+                <ul *ngIf="character.episodes && character.episodes.length > 0" class="flex flex-col w-full max-h-72 overflow-y-scroll animate__animated animate__fadeIn">
                   <li *ngFor="let episode of character.episodes" class="flex flex-row py-3 px-4 rounded-lg bg-gray-200 mb-4">
                     <p class="text-gray-700 truncate">
                       {{ episode.episode }} - {{ episode.name }}
