--- a/src/app/characters/character-detail/character-detail.component.html
+++ b/src/app/characters/character-detail/character-detail.component.html
@@ -70,8 +70,8 @@
           </div>
         </div>
       </div>
-      <div className="bg-white px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-        <button type="button" className="mt-3 w-full inline-flex justify-center rounded-md border border-blue-400 shadow-sm px-4 py-2 bg-white text-base font-medium text-blue-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm" (click)="toggleHandler()">
+      <div class="bg-white px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+        <button type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-blue-400 shadow-sm px-4 py-2 bg-white text-base font-medium text-blue-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm" (click)="toggleHandler()">
           OK
         </button>
       </div>
