--- a/src/app/characters/list/list.component.html
+++ b/src/app/characters/list/list.component.html
@@ -2,3 +2,7 @@
   <app-character *ngFor="let character of characters" [character]="character"></app-character>
 </div>
 <app-character-detail *ngIf="displayCharacter"></app-character-detail>
+<app-infinte-scroll></app-infinte-scroll>
+<div className="flex justify-center items-center">
+  <app-loader></app-loader>
+</div>
